feat: add amq connection

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+GLUSERNAME=somepass
+GLTOKEN=somepass
 HELM_CHART_NAME=challenge
 HELM_REPO_NAME=stable
-HELM_REPO_URL=https://gitlab.com/api/v4/projects/<project-id>/packages/helm/stable
-HELM_REPO_USERNAME=someuser
+HELM_REPO_URL=https://gitlab.com/api/v4/projects/51031180/packages/helm/stable
+HELM_REPO_USERNAME=somepass
 HELM_REPO_PASSWORD=somepass
+RABBITMQ_USERNAME=user
+RABBITMQ_PASSWORD=test
+ENVIRONMENT=DEV
