--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ variables:
   CD_MANIFEST_FILE: values.yaml
   APP_NAME: gitops-argocd-deploy
   CHART_FOLDER: helm
+  REGISTRY: $CI_REGISTRY/cs302-2023/g3-team8/project/assignment-service
 
 # ##############################################################################
 # ##                Setup OIDC Assume Role Template                          ##
@@ -52,8 +53,8 @@ BuildPush:
   stage: Build and Push
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --compress -t $CI_REGISTRY/group/project/image:$CI_COMMIT_SHORT_SHA -f ./docker/Dockerfile .  
-    - docker push $CI_REGISTRY/group/project/image:$CI_COMMIT_SHORT_SHA
+    - docker build --compress -t $REGISTRY:$CI_COMMIT_SHORT_SHA -f ./docker/Dockerfile .  
+    - docker push $REGISTRY:$CI_COMMIT_SHORT_SHA
 
 ##############################################################################
 ##                       Push to ECR                                       ##
