--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,8 +52,10 @@ release-image:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
+    - docker buildx create --use
     - docker buildx build --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t $CI_REGISTRY_IMAGE/$CI_COMMIT_BRANCH:$CI_COMMIT_SHORT_SHA -f ./docker/Dockerfile .  
     - docker push $CI_REGISTRY_IMAGE/$CI_COMMIT_BRANCH:$CI_COMMIT_SHORT_SHA
+  when: manual
 
 update_chart_manifest:
   stage: Update Chart
