--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,16 +46,14 @@ lint:
 
 release-image:
   stage: Release
-  image: jdrouet/docker-with-buildx:stable
+  image: docker:24.0.2
   services:
-    - docker:dind
+    - docker:24.0.2-dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - docker buildx create --use
-    - docker buildx build --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t $CI_REGISTRY_IMAGE/$CI_COMMIT_BRANCH:$CI_COMMIT_SHORT_SHA -f ./docker/Dockerfile .  
+    - docker build --compress -t $CI_REGISTRY_IMAGE/$CI_COMMIT_BRANCH:$CI_COMMIT_SHORT_SHA -f ./docker/Dockerfile .  
     - docker push $CI_REGISTRY_IMAGE/$CI_COMMIT_BRANCH:$CI_COMMIT_SHORT_SHA
-  when: manual
 
 update_chart_manifest:
   stage: Update Chart
